[package]
name = "vial-todo"
version = "0.1.0"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vial = { version = "0.1", features = ["state"] }

[dependencies.rustbreak]
version = "2.0.0-rc3"
features = ["ron_enc"]
